tests/compile_pass/shared/math_helpers.mtl
fn add_three(value: int) -> int {
    value + 3
}
