tests/compile_fail/bad_call_arity.mtl
fn add(left: int, right: int) -> int {
    left + right
}

fn main() -> int {
    add(1)
}
